service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitness-service
  namespace: fitness-tracker
spec:
  selector:
    app: fitness-tracker
  ports:
  - port: 80
    targetPort: 5000
  type: LoadBalancer
